--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,4 @@
 /* base 和 components 是可选的，请酌情添加 */
-@tailwind base;
+/* @tailwind base; */
 @tailwind components;
 @tailwind utilities;
-
-* {
-  color: green !important;
-}
